[package]
name = "hyper-file"
version = "0.1.0"
edition = "2021"
authors = ["Join.Gong<joinhack@gmail.com>", "Derek Anderson<derek@txlabs.org>"]
description = "This hyper static file crate."
license = "MIT/Apache-2.0"
repository = "https://github.com/blocklessnetwork/hyper-file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
httpdate = "1.0.2"
hyper = "0.14.26"
tokio = { version = "1.28.1", features = ["fs", "rt"] }


[lib]
doctest = false
